          margin-bottom:0.5em; 
          text-align:center }
      div.subtitle { 
          color:#C0F0C0; 
          font-size:0.8em; 
          margin-bottom:1em; 
          text-align:center }
      div.freetext { color:#F0F0F0 }
      div.list     { color:#C0C0F0 }
    </style>
  </head>
  <body>
$ 2.7.2
  % Version 2.7.2
   _ 2025-01-05
    * Added a setting to force dark mode.
    * Please see the release notes for 2.7.0 as well.
    * Please email me directly for bug reports.
$ 2.7.1
  % Version 2.7.1
   _ 2025-01-05
    * Fixed a small bug; still investigating others.
    * Fixed action bar on project list screen.
    * Please see the release notes for 2.7.0 as well.
    * Please email me directly for bug reports.
$ 2.7.0
  % Version 2.7.0
   _ 2025-01-01
    * Removed background images and changed colours (sorry about that, but it needed to be updated).
    * General upgrades to the structure of the app, allowing installation on newer devices.
    * May be removed from the Play Store - see https://github.com/knirirr/BeeCount/ for source and new releases.
$ 2.6.3
  % Version 2.6.3
   _ 2023-08-29
    * New file saving/opening code for backup and restore.
$ 2.6.2
  % Version 2.6.2
   _ 2023-08-29
    * targetSdkVersion updated as required by Google.
$ 2.6.1
  % Version 2.6.1
   _ 2022-10-06
    * Added permission to manage all files.
$ 2.6.0
  % Version 2.6.0
   _ 2021-12-30
    * Back up to and import from Downloads folder.
    * Better (well, slightly) error messages if import fails.
    * Reminder on welcome screen to back up before getting a new phone.
$ 2.5.1
  % Version 2.5.1
   _ 2020-05-21
    * Possible workaround for crashes on Android OS below version 8.0.
$ 2.5.0
  % Version 2.5.0
   _ 2020-05-19
    * Added count log contributed by Valle-R.
    * Targeting API v. 29.
$ 2.4.7
  % Version 2.4.7
   _ 2018-05-05
    * Some improvements to the language files (typos etc).
$ 2.4.6
  % Version 2.4.6
   _ 2017-11-20