@@ -5,7 +5,7 @@ android {
         minSdkVersion 21
         compileSdkVersion 35
         targetSdkVersion 35
-        versionCode 133
+        versionCode 134
     }
     compileOptions {
         sourceCompatibility = 1.8
