@@ -4,7 +4,7 @@
 
     <stroke
             android:width="1dp"
-            android:color="#55000000" />
+            android:color="#FFFFFFA0" />
 
     <solid android:color="#99000000" />
 
